[workspace]
resolver = "3"
members = ["cli"]

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
correctness = "deny"
complexity = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
zstd = "0.13"
fs-err = "3.0"
globset = "0.4"
fspy = { git = "https://github.com/voidzero-dev/vite-task.git", branch = "main" }
hex = "0.4"
moon_config = { version = "2.0.9" }
moon_project = { version = "2.0.3" }
moon_task = { version = "2.0.4" }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tar = "0.4"
tempfile = "3.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "signal"] }
tokio-util = { version = "0.7" }
uuid = { version = "1.0", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"